# FIIT

./: .gitignore  Dockerfile  README.md  ReadmeAPI.md  compose.yaml  pyproject.toml
.qodo/: history.sqlite
account/: urls.py  views.py
backend/: manage.py
config/: .env.example
dashboard/: admin.py  models.py  urls.py
data/: .gitkeep  aed_rub_5year_rates_2025-05-20.csv  aed_rub_5year_rates_2025-05-20.json  btc_rub_5year_rates_2025-05-20.json  cny_rub_5year_rates_2025-05-20.csv  cny_rub_5year_rates_2025-05-20.json  crypto_rates.json  eth_rub_5year_rates_2025-05-20.json  eur_rub_5year_rates_2025-05-20.csv  eur_rub_5year_rates_2025-05-20.json  usd_rub_5year_rates_2025-05-20.csv  usd_rub_5year_rates_2025-05-20.json
docs/: ExperimentsLog.md  experiment_0_front.md  experiment_10.md  experiment_2.md  experiment_2_front.md  experiment_3.md  experiment_4_front.md  experiment_5_front.md  experiments_front.md  models_documentation.md  moex_currency_rates_explanation.md  scraper_experiment.md
exchange_dashboard/: settings.py  urls.py
front_page_experiments/: Registration.html  chat_history.md  code_explanation.md  code_explanations.md  exchangerates.json  frontpage.html  frontpage11.html  frontpage12.html  frontpage13.html  frontpage14.html  frontpage15.html  frontpage2.html  frontpage3.html  frontpage4.html  frontpage5.html  frontpage6.html  frontpage7.html  frontpage8.html  frontpage9_bad.html  rbc.ru_api_v1_finance_news.html  scripts.js  styles.css
frontend/: account.html  base.html  dashboard.html  home.html  index.html  login.html  logout.html  register.html
(+67 files in other folders)
